// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Misc tests > combined styles are working 1`] = `
"import "@flairjs/css/cached-css/6091365a83003455.css";
import clsx from "clsx";
import { flair, Style } from "@flairjs/react";
const Box = ({ children, containerClassName }: {
	children?: React.ReactNode;
	containerClassName?: string;
}) => {
	return <div className={clsx("BELbfG_box", containerClassName)}>
      {children}
      <span className="BELbfG_title">Hello</span>
      
    </div>;
};
const SecondBox = ({ children, classList }: {
	children?: React.ReactNode;
	classList?: string[];
}) => {
	return <div className={clsx("WF-sZW_box", classList)}>{children}</div>;
};
"
`;

exports[`Misc tests > conflicting classnames in same file are working 1`] = `
"import "@flairjs/css/cached-css/6091365a83003455.css";
import clsx from "clsx";
import { flair } from "@flairjs/react";
const Box = ({ children, containerClassName }: {
	children?: React.ReactNode;
	containerClassName?: string;
}) => {
	return <div className={clsx("WjuVEG_box", containerClassName)}>{children}</div>;
};
const SecondBox = ({ children, classList }: {
	children?: React.ReactNode;
	classList?: string[];
}) => {
	return <div className={clsx("GvW6HW_box", classList)}>{children}</div>;
};
"
`;

exports[`Misc tests > global flair styles are working 1`] = `
"import "@flairjs/css/cached-css/6091365a83003455.css";
import { flair } from "@flairjs/react";
import clsx from "clsx";
export const Box = ({ children, containerClassName }: {
	children?: React.ReactNode;
	containerClassName?: string;
}) => {
	return <div className={clsx("BELbfG_box", containerClassName)}>
      {children}
      <span className="title">Hello</span>
    </div>;
};
"
`;

exports[`Misc tests > global styles are working 1`] = `
"import "@flairjs/css/cached-css/6091365a83003455.css";
import { Style } from "@flairjs/react";
import clsx from "clsx";
export const Box = ({ children, containerClassName }: {
	children?: React.ReactNode;
	containerClassName?: string;
}) => {
	return <div className={clsx("XGHD9W_box", containerClassName)}>
      {children}
      <span className="title">Hello</span>
      
      
    </div>;
};
"
`;
